tests/baselines/reference/invalidThrowStatement.errors.txt
==== tests/cases/compiler/invalidThrowStatement.ts (2 errors) ====
    throw; 
         ~
!!! error TS1003: Identifier expected.
    
    export throw null;
    ~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    